--- a/RealTracer/RealTracer.vcxproj
+++ b/RealTracer/RealTracer.vcxproj
@@ -165,6 +165,7 @@
     <ClInclude Include="Vec3.h" />
     <ClInclude Include="Math.h" />
     <ClInclude Include="Ray.h" />
+    <ClInclude Include="Vec3Single.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
