Refactor and split code into app class

--- a/RealTracer/RealTracer.vcxproj
+++ b/RealTracer/RealTracer.vcxproj
@@ -289,7 +289,9 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release AVX512|x64'">NotUsing</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release SSE2|x64'">NotUsing</PrecompiledHeader>
     </ClCompile>
+    <ClCompile Include="App.cpp" />
     <ClCompile Include="Camera.cpp" />
+    <ClCompile Include="DemoApp.cpp" />
     <ClCompile Include="DielectricMat.cpp" />
     <ClCompile Include="Hittable.cpp" />
     <ClCompile Include="imgui\backends\imgui_impl_glfw.cpp">
@@ -353,9 +355,11 @@
   <ItemGroup>
     <ClInclude Include="..\include\glad\glad.h" />
     <ClInclude Include="..\include\KHR\khrplatform.h" />
+    <ClInclude Include="App.h" />
     <ClInclude Include="Camera.h" />
     <ClInclude Include="Color.h" />
     <ClInclude Include="Common.h" />
+    <ClInclude Include="DemoApp.h" />
     <ClInclude Include="DielectricMat.h" />
     <ClInclude Include="Hittable.h" />
     <ClInclude Include="imgui\backends\imgui_impl_glfw.h" />
