--- a/RealTracer/RealTracer.vcxproj.filters
+++ b/RealTracer/RealTracer.vcxproj.filters
@@ -1,173 +1,188 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
-    <Filter Include="Source Files">
-      <UniqueIdentifier>{4FC737F1-C7A5-4376-A066-2A32D752A2FF}</UniqueIdentifier>
-      <Extensions>cpp;c;cc;cxx;c++;cppm;ixx;def;odl;idl;hpj;bat;asm;asmx</Extensions>
-    </Filter>
     <Filter Include="Resource Files">
       <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
       <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
     </Filter>
-    <Filter Include="Source Files\Math">
+    <Filter Include="RealTracer">
+      <UniqueIdentifier>{4FC737F1-C7A5-4376-A066-2A32D752A2FF}</UniqueIdentifier>
+      <Extensions>cpp;c;cc;cxx;c++;cppm;ixx;def;odl;idl;hpj;bat;asm;asmx</Extensions>
+    </Filter>
+    <Filter Include="RealTracer\Math">
       <UniqueIdentifier>{c38da43d-e4d5-49eb-aff4-e8e5b752cc67}</UniqueIdentifier>
     </Filter>
-    <Filter Include="Source Files\Objects">
+    <Filter Include="RealTracer\Objects">
       <UniqueIdentifier>{12779e05-58e3-44cc-8989-b2611aaf6154}</UniqueIdentifier>
     </Filter>
-    <Filter Include="Source Files\Materials">
+    <Filter Include="RealTracer\Materials">
       <UniqueIdentifier>{71c1c278-6162-4112-8b57-7c4fd14c6368}</UniqueIdentifier>
     </Filter>
-    <Filter Include="Source Files\ImGui">
+    <Filter Include="RealTracer\ImGui">
       <UniqueIdentifier>{954181ae-8b35-4bf1-99a3-73e05afe2a80}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Demos">
+      <UniqueIdentifier>{338cc416-7555-4d36-bfdb-ce8165edccfa}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="RealTracer.cpp">
-      <Filter>Source Files</Filter>
+      <Filter>RealTracer</Filter>
     </ClCompile>
     <ClCompile Include="Ray.cpp">
-      <Filter>Source Files</Filter>
+      <Filter>RealTracer</Filter>
     </ClCompile>
     <ClCompile Include="Hittable.cpp">
-      <Filter>Source Files</Filter>
+      <Filter>RealTracer</Filter>
     </ClCompile>
     <ClCompile Include="Sphere.cpp">
-      <Filter>Source Files\Objects</Filter>
+      <Filter>RealTracer\Objects</Filter>
     </ClCompile>
     <ClCompile Include="Scene.cpp">
-      <Filter>Source Files</Filter>
+      <Filter>RealTracer</Filter>
     </ClCompile>
     <ClCompile Include="Interval.cpp">
-      <Filter>Source Files\Math</Filter>
+      <Filter>RealTracer\Math</Filter>
     </ClCompile>
     <ClCompile Include="Camera.cpp">
-      <Filter>Source Files</Filter>
+      <Filter>RealTracer</Filter>
     </ClCompile>
     <ClCompile Include="Material.cpp">
-      <Filter>Source Files</Filter>
+      <Filter>RealTracer</Filter>
     </ClCompile>
     <ClCompile Include="LambertianMat.cpp">
-      <Filter>Source Files\Materials</Filter>
+      <Filter>RealTracer\Materials</Filter>
     </ClCompile>
     <ClCompile Include="MetalMat.cpp">
-      <Filter>Source Files\Materials</Filter>
+      <Filter>RealTracer\Materials</Filter>
     </ClCompile>
     <ClCompile Include="DielectricMat.cpp">
-      <Filter>Source Files\Materials</Filter>
+      <Filter>RealTracer\Materials</Filter>
     </ClCompile>
     <ClCompile Include="Jobmanager.cpp">
-      <Filter>Source Files</Filter>
+      <Filter>RealTracer</Filter>
     </ClCompile>
     <ClCompile Include="..\include\glad\glad.c">
-      <Filter>Source Files</Filter>
+      <Filter>RealTracer</Filter>
     </ClCompile>
     <ClCompile Include="Logger.cpp">
-      <Filter>Source Files</Filter>
+      <Filter>RealTracer</Filter>
     </ClCompile>
     <ClCompile Include="imgui\imgui.cpp">
-      <Filter>Source Files\ImGui</Filter>
+      <Filter>RealTracer\ImGui</Filter>
     </ClCompile>
     <ClCompile Include="imgui\imgui_demo.cpp">
-      <Filter>Source Files\ImGui</Filter>
+      <Filter>RealTracer\ImGui</Filter>
     </ClCompile>
     <ClCompile Include="imgui\imgui_draw.cpp">
-      <Filter>Source Files\ImGui</Filter>
+      <Filter>RealTracer\ImGui</Filter>
     </ClCompile>
     <ClCompile Include="imgui\imgui_tables.cpp">
-      <Filter>Source Files\ImGui</Filter>
+      <Filter>RealTracer\ImGui</Filter>
     </ClCompile>
     <ClCompile Include="imgui\imgui_widgets.cpp">
-      <Filter>Source Files\ImGui</Filter>
+      <Filter>RealTracer\ImGui</Filter>
     </ClCompile>
     <ClCompile Include="imgui\backends\imgui_impl_glfw.cpp">
-      <Filter>Source Files\ImGui</Filter>
+      <Filter>RealTracer\ImGui</Filter>
     </ClCompile>
     <ClCompile Include="imgui\backends\imgui_impl_opengl3.cpp">
-      <Filter>Source Files\ImGui</Filter>
+      <Filter>RealTracer\ImGui</Filter>
+    </ClCompile>
+    <ClCompile Include="App.cpp">
+      <Filter>RealTracer</Filter>
+    </ClCompile>
+    <ClCompile Include="DemoApp.cpp">
+      <Filter>Demos</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Ray.h">
-      <Filter>Source Files</Filter>
+      <Filter>RealTracer</Filter>
     </ClInclude>
     <ClInclude Include="Math.h">
-      <Filter>Source Files\Math</Filter>
+      <Filter>RealTracer\Math</Filter>
     </ClInclude>
     <ClInclude Include="Common.h">
-      <Filter>Source Files</Filter>
+      <Filter>RealTracer</Filter>
     </ClInclude>
     <ClInclude Include="Color.h">
-      <Filter>Source Files\Math</Filter>
+      <Filter>RealTracer\Math</Filter>
     </ClInclude>
     <ClInclude Include="Vec3.h">
-      <Filter>Source Files\Math</Filter>
+      <Filter>RealTracer\Math</Filter>
     </ClInclude>
     <ClInclude Include="Hittable.h">
-      <Filter>Source Files</Filter>
+      <Filter>RealTracer</Filter>
     </ClInclude>
     <ClInclude Include="Sphere.h">
-      <Filter>Source Files\Objects</Filter>
+      <Filter>RealTracer\Objects</Filter>
     </ClInclude>
     <ClInclude Include="Scene.h">
-      <Filter>Source Files</Filter>
+      <Filter>RealTracer</Filter>
     </ClInclude>
     <ClInclude Include="precomp.h">
-      <Filter>Source Files</Filter>
+      <Filter>RealTracer</Filter>
     </ClInclude>
     <ClInclude Include="Interval.h">
-      <Filter>Source Files\Math</Filter>
+      <Filter>RealTracer\Math</Filter>
     </ClInclude>
     <ClInclude Include="Camera.h">
-      <Filter>Source Files</Filter>
+      <Filter>RealTracer</Filter>
     </ClInclude>
     <ClInclude Include="Random.h">
-      <Filter>Source Files\Math</Filter>
+      <Filter>RealTracer\Math</Filter>
     </ClInclude>
     <ClInclude Include="Material.h">
-      <Filter>Source Files</Filter>
+      <Filter>RealTracer</Filter>
     </ClInclude>
     <ClInclude Include="LambertianMat.h">
-      <Filter>Source Files\Materials</Filter>
+      <Filter>RealTracer\Materials</Filter>
     </ClInclude>
     <ClInclude Include="MetalMat.h">
-      <Filter>Source Files\Materials</Filter>
+      <Filter>RealTracer\Materials</Filter>
     </ClInclude>
     <ClInclude Include="DielectricMat.h">
-      <Filter>Source Files\Materials</Filter>
+      <Filter>RealTracer\Materials</Filter>
     </ClInclude>
     <ClInclude Include="Jobmanager.h">
-      <Filter>Source Files</Filter>
+      <Filter>RealTracer</Filter>
     </ClInclude>
     <ClInclude Include="Vec3Single.h">
-      <Filter>Source Files\Math</Filter>
+      <Filter>RealTracer\Math</Filter>
     </ClInclude>
     <ClInclude Include="..\include\glad\glad.h" />
     <ClInclude Include="..\include\KHR\khrplatform.h" />
     <ClInclude Include="Logger.h" />
     <ClInclude Include="imgui\imconfig.h">
-      <Filter>Source Files\ImGui</Filter>
+      <Filter>RealTracer\ImGui</Filter>
     </ClInclude>
     <ClInclude Include="imgui\imgui.h">
-      <Filter>Source Files\ImGui</Filter>
+      <Filter>RealTracer\ImGui</Filter>
     </ClInclude>
     <ClInclude Include="imgui\imgui_internal.h">
-      <Filter>Source Files\ImGui</Filter>
+      <Filter>RealTracer\ImGui</Filter>
     </ClInclude>
     <ClInclude Include="imgui\imstb_rectpack.h">
-      <Filter>Source Files\ImGui</Filter>
+      <Filter>RealTracer\ImGui</Filter>
     </ClInclude>
     <ClInclude Include="imgui\imstb_textedit.h">
-      <Filter>Source Files\ImGui</Filter>
+      <Filter>RealTracer\ImGui</Filter>
     </ClInclude>
     <ClInclude Include="imgui\imstb_truetype.h">
-      <Filter>Source Files\ImGui</Filter>
+      <Filter>RealTracer\ImGui</Filter>
     </ClInclude>
     <ClInclude Include="imgui\backends\imgui_impl_glfw.h">
-      <Filter>Source Files\ImGui</Filter>
+      <Filter>RealTracer\ImGui</Filter>
     </ClInclude>
     <ClInclude Include="imgui\backends\imgui_impl_opengl3.h">
-      <Filter>Source Files\ImGui</Filter>
+      <Filter>RealTracer\ImGui</Filter>
+    </ClInclude>
+    <ClInclude Include="App.h">
+      <Filter>RealTracer</Filter>
+    </ClInclude>
+    <ClInclude Include="DemoApp.h">
+      <Filter>Demos</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
