--- a/RealTracer/RealTracer.vcxproj.filters
+++ b/RealTracer/RealTracer.vcxproj.filters
@@ -110,6 +110,9 @@
     <ClCompile Include="Texture.cpp">
       <Filter>RealTracer</Filter>
     </ClCompile>
+    <ClCompile Include="stb_image.cpp">
+      <Filter>Lib</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Ray.h">
@@ -213,6 +216,9 @@
     </ClInclude>
     <ClInclude Include="Texture.h">
       <Filter>RealTracer</Filter>
+    </ClInclude>
+    <ClInclude Include="stb_image.h">
+      <Filter>Lib</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
