--- a/RealTracer/RealTracer.vcxproj.filters
+++ b/RealTracer/RealTracer.vcxproj.filters
@@ -104,9 +104,6 @@
     <ClCompile Include="Hittable.cpp">
       <Filter>RealTracer\Abstracts</Filter>
     </ClCompile>
-    <ClCompile Include="Cube.cpp">
-      <Filter>RealTracer\Objects</Filter>
-    </ClCompile>
     <ClCompile Include="Texture.cpp">
       <Filter>RealTracer</Filter>
     </ClCompile>
@@ -118,6 +115,12 @@
     </ClCompile>
     <ClCompile Include="Quad.cpp">
       <Filter>RealTracer\Objects</Filter>
+    </ClCompile>
+    <ClCompile Include="AABB.cpp">
+      <Filter>RealTracer</Filter>
+    </ClCompile>
+    <ClCompile Include="BVHNode.cpp">
+      <Filter>RealTracer</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -217,9 +220,6 @@
     <ClInclude Include="Hittable.h">
       <Filter>RealTracer\Abstracts</Filter>
     </ClInclude>
-    <ClInclude Include="Cube.h">
-      <Filter>RealTracer\Objects</Filter>
-    </ClInclude>
     <ClInclude Include="Texture.h">
       <Filter>RealTracer</Filter>
     </ClInclude>
@@ -232,5 +232,9 @@
     <ClInclude Include="Quad.h">
       <Filter>RealTracer\Objects</Filter>
     </ClInclude>
+    <ClInclude Include="AABB.h">
+      <Filter>RealTracer</Filter>
+    </ClInclude>
+    <ClInclude Include="BVHNode.h" />
   </ItemGroup>
 </Project>
